--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,23 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     
+    <div class="container-fluid">
 
+      <nav class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <img src="images/movie-icon.png" class="home-icon fl-left">
+            <a class="navbar-brand">Movies OMDb</a>
+          </div>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="https://github.com/Morente5/movies-OMDb">View this project on GitHub <i class="fa fa-github" aria-hidden="true"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      </div>
     
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
