Added Responsive Search Bar

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
 		
 		<div class="container-fluid">
 
+			<!-- NAVBAR -->
 			<nav class="navbar navbar-default">
 				<div class="container">
 					<div class="navbar-header">
@@ -42,6 +43,42 @@
 					</div>
 				</div>
 			</nav>
+
+			<!-- SEARCH BAR -->
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="input-group" id="adv-search">
+							<input type="text" class="form-control" placeholder="Search" />
+								<div class="input-group-btn">
+									<div class="btn-group" role="group">
+										<div class="dropdown dropdown-lg">
+											<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">More <span class="caret"></span></button>
+											<div class="dropdown-menu dropdown-menu-right" role="menu">
+												<form class="form-horizontal" role="form">
+													<div class="form-group">
+														<label for="filter">Filter by</label>
+														<select class="form-control">
+															<option value="0" selected>All</option>
+															<option value="1">Movies</option>
+															<option value="2">Series</option>
+														</select>
+													</div>
+													<div class="form-group">
+														<label for="contain">Year</label>
+														<input class="form-control" type="text"/>
+													</div>
+													<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+												</form>
+											</div>
+										</div>
+										<button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 
 			</div>
 		
