Added Movie Grid styles and mouse events. Dummy Movie for testing purposes

--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,19 @@
 					</div>
 				</div>
 
+				<!-- POSTER -->
+				<div class="container-fluid">
+					<div id="search-container">
+						<div class="poster">
+							<img src=../images/poster.png class="poster-img"></img>
+							<div class="poster-desc">
+								<h2>Name</h2>
+								<p>YYYY</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
