Fixed image path, added favicon link

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Movies OMDb</title>
 
-		<!-- Place favicon.ico in the root directory -->
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 
 		<!-- build:css styles/vendor.css -->
 		<!-- bower:css -->
@@ -84,7 +84,7 @@
 				<div class="container-fluid">
 					<div id="search-container">
 						<div class="poster">
-							<img src=../images/poster.png class="poster-img"></img>
+							<img src=images/poster.png class="poster-img"></img>
 							<div class="poster-desc">
 								<h2>Name</h2>
 								<p>YYYY</p>
