--- a/app/index.html
+++ b/app/index.html
@@ -68,11 +68,11 @@
 														<label for="contain">Year</label>
 														<input class="form-control" type="text"/>
 													</div>
-													<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+													<button type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i></button>
 												</form>
 											</div>
 										</div>
-										<button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+										<button type="button" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i></button>
 									</div>
 								</div>
 							</div>
