Created AJAX request and events, implemented search function, fixed responsive posters, added loading animation

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="input-group" id="adv-search">
-							<input type="text" class="form-control" placeholder="Search" />
+							<input id="input-title" type="text" class="form-control" placeholder="Search" />
 								<div class="input-group-btn">
 									<div class="btn-group" role="group">
 										<div class="dropdown dropdown-lg">
@@ -58,7 +58,7 @@
 												<form class="form-horizontal" role="form">
 													<div class="form-group">
 														<label for="filter">Filter by</label>
-														<select class="form-control">
+														<select id="input-type" class="form-control">
 															<option value="0" selected>All</option>
 															<option value="1">Movies</option>
 															<option value="2">Series</option>
@@ -66,13 +66,13 @@
 													</div>
 													<div class="form-group">
 														<label for="contain">Year</label>
-														<input class="form-control" type="text"/>
+														<input id="input-year" class="form-control" type="number" min="1874" max="2100" step="1"/>
 													</div>
-													<button type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i></button>
+													<button id="search-btn" type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i></button>
 												</form>
 											</div>
 										</div>
-										<button type="button" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i></button>
+										<button id="adv-search-btn" type="button" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i></button>
 									</div>
 								</div>
 							</div>
@@ -83,15 +83,24 @@
 				<!-- POSTER -->
 				<div class="container-fluid">
 					<div id="search-container">
-						<div class="poster">
-							<img src=images/poster.png class="poster-img"></img>
-							<div class="poster-desc">
-								<h2>Name</h2>
-								<p>YYYY</p>
-							</div>
-						</div>
+						
 					</div>
 				</div>
+
+				<!-- SPINNER -->
+				<div class="container-fluid">
+					<div class="spinner">
+					  <div></div>
+					  <div></div>
+					  <div></div>
+					  <div></div>
+					</div>
+				</div>
+
+				<!-- FOOTER -->
+				<footer class="detection-footer">
+				      
+				</footer>
 
 			</div>
 		
