Added modal popup showing movie info on click

--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,34 @@
 					</div>
 				</div>
 
+				<!-- POSTER MODAL -->
+				<div class='container' id="search-container">
+
+					<div class="modal fade" id="myModal" role="dialog">
+					    <div class="modal-dialog modal-lg">
+
+					      	<div class="modal-content">
+					        	<div class="modal-header">
+					          		<button type="button" class="close" data-dismiss="modal"></button>
+					          		<h2 id="modal-title" class="modal-title">Modal Header</h2>
+					          		<h4 class="modal-title"><span id="modal-type">Type</span> - <span id="modal-year">YYYY</span> - <span id="modal-country">Country</span></h4>
+					          		<h6 id="modal-genre" class="modal-title">Modal Header</h6>
+					        	</div>
+					        	<div class="modal-body">
+					          		<p>Director: <span id="modal-director">Director</span></p>
+					          		<p>Writer: <span id="modal-writer">Director</span></p>
+					          		<p>Cast: <span id="modal-cast">Director</span></p>
+					          		<p id="modal-plot">plot</p>
+					        	</div>
+					        	<div class="modal-footer">
+					          		<a id="modal-link" href="" class="btn btn-default">IMDb</a>
+					        	</div>
+					      	</div>
+
+					    </div>
+					</div>
+				</div>
+
 				<!-- SPINNER -->
 				<div class="container-fluid">
 					<div class="spinner">
